--- a/RuC.WPF/Resources/lang.xaml
+++ b/RuC.WPF/Resources/lang.xaml
@@ -54,6 +54,7 @@
     <v:String x:Key="m_Debug">_Debug</v:String>
     <v:String x:Key="m_Run">_Run</v:String>
     <v:String x:Key="m_Break">Brea_k</v:String>
+    <v:String x:Key="m_Stop">_Stop</v:String>
     <v:String x:Key="m_Build">_Build</v:String>
     <v:String x:Key="m_Upload">Upload</v:String>
     <v:String x:Key="m_UpdateFirmware">Update Firmware</v:String>
@@ -76,7 +77,7 @@
     <v:String x:Key="m_CtrlZ">Undo (Ctrl+Z)</v:String>
     <v:String x:Key="m_CtrlY">Redo (Ctrl+Y)</v:String>
     <v:String x:Key="m_F5">Run (F5)</v:String>
-    <v:String x:Key="m_ShiftF5">Break (Shift+F5)</v:String>
+    <v:String x:Key="m_ShiftF5">Stop (Shift+F5)</v:String>
     <v:String x:Key="m_CtrlB">Upload (Ctrl+B)</v:String>
 
     <!-- About window -->
