Set build height & fix build window creating

--- a/RuC.WPF/MainWindow.xaml
+++ b/RuC.WPF/MainWindow.xaml
@@ -312,7 +312,7 @@
                     <ad:LayoutRoot>
                         <ad:LayoutPanel Orientation="Vertical">
                             <ad:LayoutDocumentPane x:Name="documentsRoot" IsMaximized="True" />
-                            <ad:LayoutAnchorablePane x:Name="outputRoot" />
+                            <ad:LayoutAnchorablePane x:Name="outputRoot" DockMinHeight="150" />
                         </ad:LayoutPanel>
                     </ad:LayoutRoot>
                 </ad:DockingManager>
